@@ -2,8 +2,9 @@ xp-maven-plugin (3.1.2)
 
   * change default unittest ini files location to 'src/test/ini'
   * add ${project.classifier} property to specify project classifier
+  * change artifact id from 'net.xp-framework:language' to 'net.xp-framework:compiler'
 
- -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 07 Aug 2012
+ -- Marius Rosoiu <marius.rosoiu@1and1.ro> Tue, 18 Sep 2012
 
 
 xp-maven-plugin (3.1.1)
